# prefect_streamline

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  prefect-ci.yml  publish.yml
alfred/: ci.py  lint.py  publish.py  tests.py
src/prefect_streamline/: cli.py  deploybook.py  flowtest.py
src/prefect_streamline/core/: deploy.py  importutils.py  waiting.py
tests/acceptances/: test_cli.py
tests/fixture/fake_flow/: fake_flow.py
tests/fixture/prefect/: .env  Dockerfile  cmd.sh  docker-compose.yml  fixtup.yml  pyproject.toml
tests/fixture/prefect/.hooks/: hook_started.py
tests/integrations/: test_deploybook.py
tests/units/: test_deploy.py  test_flowtest.py
tests/units/core/: test_deploy.py
