[tool.poetry]
name = "prefect_streamline"
version = "1.1.2"
description = "Prefect_Streamline is an opinionated extension that provides helpers to deploy and test Prefect flows quickly and easily."
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "prefect_streamline", from = "src"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^2.8"
click = "^8.1.3"
requests = "^2.25.0"
types-requests = "^2.25"

[tool.poetry.scripts]
prefect-streamline = 'prefect_streamline.cli:cli'

[tool.poetry.group.dev.dependencies]
alfred-cli = "^1.2.0"
mypy = "^0.991"
pytest = "^7.2.0"
fixtup = "^0.1.4"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.fixtup]
fixtures = "tests/fixture"
plugins = [
    "fixtup.plugins.dotenv",
    "fixtup.plugins.docker"
]
