[tool.poetry]
name = "prefect_streamline"
version = "3.0.0rc1"
description = "Prefect_Streamline is an opinionated extension that provides helpers to deploy Prefect flows quickly and easily."
authors = ["Fabien Arcellier <fabien.arcellier@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "prefect_streamline", from = "src"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Environment :: Console"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
prefect = "^3.2.0"
click = "^8.1.0"


[tool.poetry.scripts]
prefect-streamline = 'prefect_streamline.cli:cli'

[tool.poetry.group.dev.dependencies]
alfred-cli = "^3.0.0"
mypy = "^1.20.0"
pytest = "^9.0.3"
fixtup = "^0.2.1"
types-requests = "^2.33.0.20260408"
requests = "^2.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.fixtup]
fixtures = "tests/fixture"
plugins = [
    "fixtup.plugins.dotenv",
    "fixtup.plugins.docker"
]

[tool.mypy]
exclude = ['.venv']
ignore_missing_imports = true
